assingments/part1/exercise_109/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - port: 2355
      protocol: TCP
      targetPort: 5002
